# python_financial_operation

./: .dockerignore  .pylintrc  Dockerfile  Env.postman_environment.json  Makefile  README.md  alembic.ini  docker-compose.yml  financial_transaction.postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 36dc5033d082_create_account_table.py  838ab1203219_create_transaction_table.py
src/app/: __init__.py  config.py  helpers.py
src/app/blueprints/: accounts.py  customers.py  transactions.py
src/app/models/: __init__.py  accounts.py  customers.py
src/app/schemas/: accounts.py  customers.py  transactions.py
src/tests/: conftest.py  test_accounts.py  test_customers.py  test_transactions.py
